#9654 tooltip가림 오류 수정(z-index표준화 포함)

--- a/src/main/resources/public/src/scss/form/_components.scss
+++ b/src/main/resources/public/src/scss/form/_components.scss
@@ -156,7 +156,7 @@
           border-bottom-right-radius: 0;
           &:focus,
           &:hover {
-            z-index: 1;
+            z-index: $z-index-event;
           }
         }
         > button {
@@ -171,7 +171,7 @@
           &:focus,
           &:hover,
           &:active {
-            z-index: 1;
+            z-index: $z-index-event;
           }
         }
       }
