--- a/src/main/resources/public/src/scss/process/_layout.scss
+++ b/src/main/resources/public/src/scss/process/_layout.scss
@@ -21,7 +21,7 @@
     color: $layout-header-font-color;
     background-color: $layout-header-bg-color;
     padding: 0 1.25rem; // 0 20px
-    z-index: 999;
+    z-index: $z-index-gnb;
     // process designer 문구
     .name {
       font-size: 1.125rem; // 18px
