--- a/src/main/resources/public/src/scss/form/_layout.scss
+++ b/src/main/resources/public/src/scss/form/_layout.scss
@@ -18,7 +18,7 @@
     color: $layout-header-font-color;
     background-color: $layout-header-bg-color;
     padding: 0 1.25rem; // 0 20px
-    z-index: 999;
+    z-index: $z-index-gnb;
     // form designer 문구
     .name {
       font-size: 1.125rem; // 18px
@@ -195,7 +195,7 @@
           input[type=text] {
             &:focus,
             &:hover {
-              z-index: 1;
+              z-index: $z-index-event;
             }
           }
           button {
@@ -209,7 +209,7 @@
             &:focus,
             &:hover,
             &:active {
-              z-index: 1;
+              z-index: $z-index-event;
             }
           }
         }
