--- a/src/main/resources/public/src/scss/template/_buttons.scss
+++ b/src/main/resources/public/src/scss/template/_buttons.scss
@@ -250,7 +250,7 @@ button {
         color: $btn-group-pressed-font-color;
         background-color: $btn-group-pressed-bg-color;
         border-color: $btn-group-pressed-border-color;
-        z-index: 1;
+        z-index: $z-index-event;
 
         .icon {
           background: $btn-group-pressed-font-color;
@@ -350,7 +350,7 @@ button {
         color: $btn-group-pressed-font-color;
         background-color: $btn-group-pressed-bg-color;
         border-color: $btn-group-pressed-border-color;
-        z-index: 1;
+        z-index: $z-index-event;
 
         .icon {
           background: $btn-group-pressed-font-color;
