--- a/src/main/resources/public/src/scss/template/_elements.scss
+++ b/src/main/resources/public/src/scss/template/_elements.scss
@@ -317,7 +317,7 @@ select {
   top: calc(100% + 0.3125rem); // 5px
   right: 0;
   left: 0;
-  z-index: 999;
+  z-index: $z-index-between-alert-modal;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -657,7 +657,7 @@ label {
 
     &:focus,
     &:hover {
-      z-index: 1;
+      z-index: $z-index-event;
     }
   }
   button { 
@@ -668,7 +668,7 @@ label {
     &:focus,
     &:hover,
     &:active {
-      z-index: 1;
+      z-index: $z-index-event ;
     }
   }
 }
