--- a/src/main/resources/public/src/scss/template/_file-uploader.scss
+++ b/src/main/resources/public/src/scss/template/_file-uploader.scss
@@ -93,7 +93,7 @@
         vertical-align: top;
         // 마우스 오버시 효과
         &:hover {
-          z-index: 1000;
+          z-index: $z-index-event;
           .dz-details {
             opacity: 1;
           }
@@ -143,7 +143,7 @@
           text-align: center;
           color: rgba(0, 0, 0, 0.9);
           opacity: 0;
-          z-index: 20;
+          z-index: $z-index-between-event-and-default;
           // 파일 아이콘
           .dz-file-type {
             grid-column: 1;
@@ -209,7 +209,7 @@
           display: block;
           position: relative;
           overflow: hidden;
-          z-index: 10;
+          z-index: $z-index-between-event-and-default;
           img {
             display: block;
           }
@@ -238,7 +238,7 @@
             -ms-transition: opacity 0.3s ease;
             -o-transition: opacity 0.3s ease;
             transition: opacity 0.3s ease;
-            z-index: 1000;
+            z-index: $z-index-tooltip;
             pointer-events: none;
 
             &:after {
@@ -300,7 +300,7 @@
           -webkit-transform: scale(1);
           transform: scale(1);
           opacity: 1;
-          z-index: 1000;
+          z-index: $z-index-between-modal-gnb;
           overflow: hidden;
           pointer-events: none;
 
