--- a/src/main/resources/public/src/scss/theme/default/_gnb.scss
+++ b/src/main/resources/public/src/scss/theme/default/_gnb.scss
@@ -25,7 +25,7 @@
     background-color: $nav-bg-color;
     position: fixed;
     bottom: 0;
-    z-index: 1000;
+    z-index: $z-index-gnb;
   
     .breadcrumb { display: none; }
   
@@ -90,7 +90,7 @@
     width: $logo-width;
     height: $logo-height;
     background-color: $menu-bg-color;
-    z-index: 1000;
+    z-index: $z-index-gnb;
     padding: 0.9375rem 1.25rem 0.9375rem 1.25rem; // 15px 20px 15px 20px
   }
   
@@ -101,7 +101,7 @@
     background-color: $menu-bg-color;
     top: $logo-height;
     left: 0;
-    z-index: 1000;
+    z-index: $z-index-gnb;
     overflow: auto;
 
     .right { right: 0.375rem; } // 6px
