--- a/src/main/resources/public/src/scss/theme/proto/_gnb.scss
+++ b/src/main/resources/public/src/scss/theme/proto/_gnb.scss
@@ -2,7 +2,7 @@
 // TOP (breadcrumb)
 // *********************************************************************************************************************
 /* 상단 바 */
-.top-menu {width:100%; height:60px; background: rgba(255, 255, 255, 1); position: fixed; top: 0; z-index: 2;}
+.top-menu {width:100%; height:60px; background: rgba(255, 255, 255, 1); position: fixed; top: 0; z-index: $z-index-gnb;}
 
 /* 상단 Breadcrumb */
 .breadcrumb {
@@ -138,7 +138,7 @@
             &.active{
                 display: block; margin:0 0 0 54px;
                 & ul li {
-                    padding:10px 0; z-index: 999; width:150px; background: rgba(255, 255, 255, 1 ); color:rgba(103, 113, 127, 1);
+                    padding:10px 0; z-index: $z-index-gnb; width:150px; background: rgba(255, 255, 255, 1 ); color:rgba(103, 113, 127, 1);
                     font-weight: 300; opacity: 1;
                     &:hover { background: rgba(0, 80, 255,0.05); color:rgba(72 , 80, 92, 1);}
                     & a { visibility: visible; }
@@ -180,11 +180,11 @@
 .left-close-menu.disable{display: none;}
 
 /* GNB 메뉴 열렸을 때 */
-.left-open-menu{width:220px; height:100%; background:$alice-primary; position: fixed; left: 0; z-index: 999;}
+.left-open-menu{width:220px; height:100%; background:$alice-primary; position: fixed; left: 0; z-index: $z-index-gnb;}
 .logo-open{height:60px; background:rgba(255, 255, 255, 0.1) url($icon-folder-path + "icon_menu_open_logo.png") no-repeat 20px center;}
 
 /* GNB 메뉴 닫혔을 때 */
-.left-close-menu{width:60px; height:100%; background:$alice-primary; position: fixed; left: 0; z-index: 999;}
+.left-close-menu{width:60px; height:100%; background:$alice-primary; position: fixed; left: 0; z-index: $z-index-gnb;}
 .logo-close{height:60px; background:rgba(255, 255, 255, 0.1) url($icon-folder-path + "icon_menu_close_logo.png") no-repeat 20px center;}
 
 /* 토글메뉴 리스트 */
