--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -597,14 +597,15 @@ input, button, select, optgroup, textarea {
 .form-container .form-main .drawing-board *:focus {
   outline: none !important;
 }
-.form-container .form-main .drawing-board[data-readonly=true] .dropzone,
-.form-container .form-main .drawing-board[data-readonly=true] .ql-toolbar,
-.form-container .form-main .drawing-board[data-readonly=true] textarea,
-.form-container .form-main .drawing-board[data-readonly=true] button,
-.form-container .form-main .drawing-board[data-readonly=true] input[type=text],
-.form-container .form-main .drawing-board[data-readonly=true] label.radio,
-.form-container .form-main .drawing-board[data-readonly=true] label.checkbox,
-.form-container .form-main .drawing-board[data-readonly=true] select {
+.form-container .form-main .drawing-board[data-readonly=true] .component .dropzone,
+.form-container .form-main .drawing-board[data-readonly=true] .component .ql-toolbar,
+.form-container .form-main .drawing-board[data-readonly=true] .component textarea,
+.form-container .form-main .drawing-board[data-readonly=true] .component button,
+.form-container .form-main .drawing-board[data-readonly=true] .component input[type=text],
+.form-container .form-main .drawing-board[data-readonly=true] .component label.radio,
+.form-container .form-main .drawing-board[data-readonly=true] .component label.checkbox,
+.form-container .form-main .drawing-board[data-readonly=true] .component select,
+.form-container .form-main .drawing-board[data-readonly=true] .component .select {
   pointer-events: none;
 }
 .form-container .form-main .drawing-board[data-readonly=true] .component .move-handler {
@@ -924,7 +925,6 @@ input:disabled {
 input:read-only {
   background-color: #F7F8F9;
   border-color: #EBEBEB;
-  pointer-events: none;
   cursor: default;
 }
 input.icon {
@@ -990,6 +990,11 @@ textarea:disabled {
   pointer-events: none;
   cursor: default;
 }
+textarea:read-only {
+  background-color: #F7F8F9;
+  border-color: #EBEBEB;
+  cursor: default;
+}
 textarea.error {
   color: #FF405A !important;
   border: 0.0625rem solid #FF405A !important;
@@ -1049,11 +1054,6 @@ select:disabled {
   cursor: default;
 }
 
-.select-hidden {
-  visibility: hidden;
-  padding-right: 0.625rem;
-}
-
 .select {
   cursor: pointer;
   display: inline-block;
@@ -1061,8 +1061,11 @@ select:disabled {
   font-size: 1rem;
   height: 2.5rem;
 }
-
-.designed-select {
+.select .select-hidden {
+  visibility: hidden;
+  padding-right: 0.625rem;
+}
+.select .designed-select {
   position: absolute;
   top: 0;
   right: 0;
@@ -1081,7 +1084,7 @@ select:disabled {
   align-items: flex-start;
   overflow: hidden;
 }
-.designed-select:after {
+.select .designed-select:after {
   content: "";
   width: 0;
   height: 0;
@@ -1090,38 +1093,37 @@ select:disabled {
   position: absolute;
   right: 0.625rem;
 }
-.designed-select:hover {
+.select .designed-select:hover {
   outline: 0;
   border: 0.0625rem solid #0098FF;
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
 }
-.designed-select:active {
+.select .designed-select:active {
   outline: 0;
   border: 0.0625rem solid #0098FF;
 }
-.designed-select:active:after {
+.select .designed-select:active:after {
   top: 0.5625rem;
   background: url("../media/icons/icon_arrow_up.svg") no-repeat center left;
 }
-.designed-select.active {
+.select .designed-select.active {
   outline: 0;
   border: 0.0625rem solid #0098FF;
 }
-.designed-select.active:after {
+.select .designed-select.active:after {
   top: 0.5625rem;
   background: url("../media/icons/icon_arrow_up.svg") no-repeat center left;
 }
-.designed-select.active + .designed-options {
+.select .designed-select.active + .designed-options {
   display: block;
 }
-.designed-select.disabled-select {
+.select .designed-select.disabled-select {
   color: #ACB4BF;
   background-color: #F7F8F9;
   pointer-events: none;
   cursor: default;
 }
-
-.designed-options {
+.select .designed-options {
   display: none;
   position: absolute;
   top: calc(100% + 0.3125rem);
@@ -1140,18 +1142,22 @@ select:disabled {
   border-radius: 0.0625rem;
   box-shadow: 0 0 0.3125rem 0 #ebebeb;
 }
-.designed-options li {
+.select .designed-options li {
   margin: 0;
   padding: 0.75rem 0;
   text-indent: 0.625rem;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-.designed-options li:hover {
+.select .designed-options li:hover {
   background: rgba(0, 152, 255, 0.08);
 }
-.designed-options li[rel=hide] {
+.select .designed-options li[rel=hide] {
   display: none;
+}
+.select.readonly .designed-select {
+  background-color: #F7F8F9;
+  border: 0.0625rem solid #EBEBEB;
 }
 
 option:hover {
@@ -2345,8 +2351,8 @@ button .icon-search {
  *
  * 파일 경로 : template/_scrollbars.scss
  * @description 스크롤바 디자인
- * @version 1.0
  * @author wdj
+ * @version 1.0
  */
 .scrollbar > .os-scrollbar-horizontal {
   right: 0.625rem;
