--- a/src/main/resources/public/template/cmdb/ci/ciSearch.html
+++ b/src/main/resources/public/template/cmdb/ci/ciSearch.html
@@ -32,8 +32,8 @@
     </div>
 </th:block>
 </body>
-<script th:src="@{/assets/vendors/tagify/tagify.js}"></script>
 <th:block layout:fragment="pageScript">
+    <script th:src="@{/assets/vendors/tagify/tagify.js}"></script>
     <script type="text/javascript">
         /*<![CDATA[*/
         let offsetCount = 0;
@@ -87,6 +87,7 @@
                         }
                     } else {
                         if (url.indexOf("/cmdb/cis/view/") === 0) {
+                            //console.log(response.responseText);
                             const ciDetailModal = new modal({
                                 title: i18n.msg('cmdb.ci.label.ciInquiry'),
                                 body: response.responseText,
@@ -115,16 +116,7 @@
                                             inheritedAttrs: "class"
                                         }
                                     });
-                                    // TODO: 태그 기능 추가
-                                    /*new Tagify(document.getElementById('ciTags'), {
-                                        pattern: /^.{0,100}$/,
-                                        editTags: false,
-                                        callbacks: {
-                                            'add': onAddTag,
-                                            'remove': onRemoveTag
-                                        },
-                                        placeholder: i18n.msg('token.msg.tag')
-                                    });*/
+                                    new Tagify(document.querySelector('input[name=tags]'));
                                 }
                             });
                             ciDetailModal.show();
