#10079 [CI 컴포넌트] CI 세부 화면

--- a/src/main/resources/public/src/scss/template/_elements.scss
+++ b/src/main/resources/public/src/scss/template/_elements.scss
@@ -171,6 +171,12 @@ textarea {
     cursor: default;
   }
 
+  &:read-only {
+    background-color: $element-readonly-bg-color;
+    border-color: $element-readonly-border-color;
+    cursor: default;
+  }
+
   &.error {
     color: $element-error-font-color;
     border: $element-error-border;
