--- a/src/main/resources/public/src/scss/portal/_mixins.scss
+++ b/src/main/resources/public/src/scss/portal/_mixins.scss
@@ -4,7 +4,8 @@
   background-color: $main-header-bg-color;
   border-bottom: $main-header-border;
 
-  .header-title { 
+  .header-title {
+    height: 10.625rem; // 170px
     padding: 3.75rem 0; // 60px 0
 
     .description { margin-left: 0.625rem; } // 10px
