#9537 background-color-> background로 변경+ 소스 디자인 통일

--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -2861,7 +2861,7 @@ button .icon-search {
   cursor: pointer;
 }
 .file-uploader-edit .dropzone .dz-preview .dz-download .icon-download:hover {
-  background-color: #586872;
+  background: #586872;
 }
 .file-uploader-edit .dropzone .dz-preview .dz-remove {
   display: block;
@@ -2888,7 +2888,7 @@ button .icon-search {
   cursor: pointer;
 }
 .file-uploader-edit .dropzone .dz-preview .dz-remove .icon-delete:hover {
-  background-color: #586872;
+  background: #586872;
 }
 .file-uploader-edit .dropzone .dz-preview .dz-image {
   display: block;
