--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -3089,7 +3089,7 @@ button.ghost-line:disabled .icon {
   cursor: pointer;
 }
 .file-uploader-edit .dropzone .dz-preview .dz-download .icon-download:hover {
-  background-color: #586872;
+  background: #586872;
 }
 .file-uploader-edit .dropzone .dz-preview .dz-remove {
   display: block;
@@ -3116,7 +3116,7 @@ button.ghost-line:disabled .icon {
   cursor: pointer;
 }
 .file-uploader-edit .dropzone .dz-preview .dz-remove .icon-delete:hover {
-  background-color: #586872;
+  background: #586872;
 }
 .file-uploader-edit .dropzone .dz-preview .dz-image {
   display: block;
