--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -3368,7 +3368,7 @@ button .icon-plus {
   cursor: pointer;
 }
 .file-uploader-edit .dropzone .dz-preview .dz-download .icon-download:hover {
-  background-color: #586872;
+  background: #586872;
 }
 .file-uploader-edit .dropzone .dz-preview .dz-remove {
   display: block;
@@ -3395,7 +3395,7 @@ button .icon-plus {
   cursor: pointer;
 }
 .file-uploader-edit .dropzone .dz-preview .dz-remove .icon-delete:hover {
-  background-color: #586872;
+  background: #586872;
 }
 .file-uploader-edit .dropzone .dz-preview .dz-image {
   display: block;
