--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1171,7 +1171,7 @@ table[id=documentDisplay] td {
   margin: 0.3125rem;
 }
 
-/* _buttons.scss
+/* _buttons.scss 
  *
  * 파일 경로 : template/_buttons.scss
  * @description 버튼 디자인
@@ -2711,7 +2711,7 @@ button .icon-plus {
   background: #929AA6;
 }
 
-/* _alerts.scss
+/* _alerts.scss 
  *
  * 파일 경로 : template/_alerts.scss
  * @description 알림 모달
@@ -2852,7 +2852,7 @@ button .icon-plus {
     margin: 0.5em;
   }
 }
-/* _scrollbars.scss
+/* _scrollbars.scss 
  *
  * 파일 경로 : template/_scrollbars.scss
  * @description 스크롤바 디자인
@@ -3123,7 +3123,7 @@ button .icon-plus {
   background-color: #CCCED1;
 }
 
-/* _file-uploader.scss
+/* _file-uploader.scss 
  *
  * 파일 경로 : template/_file-uploader.scss
  * @description 파일 업로드 관련 디자인
@@ -3576,7 +3576,7 @@ button .icon-plus {
   display: none;
 }
 
-/* _avatar.scss
+/* _avatar.scss 
  *
  * 파일 경로 : template/_avatar.scss
  * @description 아바타 관련 디자인
@@ -3772,7 +3772,7 @@ button .icon-plus {
   margin-bottom: 0.3125rem;
 }
 
-/* _date-picker.scss
+/* _date-picker.scss 
  *
  * 파일 경로 : template/_date-picker.scss
  * @description Date/Time picker 관련 디자인
@@ -4013,7 +4013,7 @@ button .icon-plus {
   margin: 1.25rem 1.25rem 1.25rem 0;
 }
 
-/* _text-editor.scss
+/* _text-editor.scss 
  *
  * 파일 경로 : template/_text-editor.scss
  * @description Customize Quill Editor v1.3.6 (https://quilljs.com/)
@@ -4212,7 +4212,7 @@ button .icon-plus {
   min-height: 12.5rem;
 }
 
-/* _tree.scss
+/* _tree.scss 
  *
  * 파일 경로 : template/_tree.scss
  * @description 트리 구조 디자인
@@ -4349,7 +4349,7 @@ span.modal_node_selected label {
   color: #3F4B56;
 }
 
-/* _color-picker.scss
+/* _color-picker.scss 
  *
  * 파일 경로 : template/_color-picker.scss
  * @description 컬러 피커 디자인
@@ -4404,7 +4404,7 @@ span.modal_node_selected label {
   outline: 0.0625rem solid #0098FF;
 }
 
-/* _modal.scss
+/* _modal.scss 
  *
  * 파일 경로 : template/_modal.scss
  * @description 모달 디자인
@@ -4633,8 +4633,81 @@ body.modal-active {
   display: inline-block;
   vertical-align: middle;
 }
+.modal-dialog.cmdb-ci-view-modal {
+  width: 62.5rem;
+  height: 53.0625rem;
+}
+.modal-dialog.cmdb-ci-view-modal .modal-content {
+  height: calc(53.0625rem - 3.375rem - 5rem);
+  padding: 1.25rem;
+}
+.modal-dialog.cmdb-ci-view-modal .modal-content .cmdb-ci-content-edit {
+  height: calc(53.0625rem - 3.375rem - 5rem - 3.125rem);
+}
+.modal-dialog.cmdb-ci-view-modal .modal-content .cmdb-ci-content-edit .edit-form {
+  padding: 0 2.5rem;
+}
+.modal-dialog.cmdb-ci-view-modal .modal-content .cmdb-ci-content-edit .edit-row {
+  margin-top: 0.625rem;
+}
+.modal-dialog.cmdb-ci-view-modal .modal-content .cmdb-ci-content-edit .field-label {
+  margin: 0.625rem 0;
+}
+.modal-dialog.cmdb-ci-view-modal .modal-content .cmdb-ci-content-edit .attribute-group {
+  background-color: #F7F8F9;
+  padding: 0 1.25rem 1.25rem 1.25rem;
+  border: 0.0625rem solid #EBEBEB;
+  border-radius: 0.0625rem;
+  margin-bottom: 0.625rem;
+}
+.modal-dialog.cmdb-ci-view-modal .modal-content .cmdb-ci-content-view {
+  height: calc(53.0625rem - 3.375rem - 5rem - 3.125rem);
+}
+.modal-dialog.cmdb-ci-view-modal .modal-content .cmdb-ci-content-view .view-form {
+  padding: 0 2.5rem;
+}
+.modal-dialog.cmdb-ci-view-modal .modal-content .cmdb-ci-content-view .view-row {
+  margin-top: 0.625rem;
+}
+.modal-dialog.cmdb-ci-view-modal .modal-content .cmdb-ci-content-view .field-label {
+  margin: 0.625rem 0;
+}
+.modal-dialog.cmdb-ci-view-modal .modal-content .cmdb-ci-content-view .attribute-group {
+  background-color: #F7F8F9;
+  padding: 0 1.25rem 1.25rem 1.25rem;
+  border: 0.0625rem solid #EBEBEB;
+  border-radius: 0.0625rem;
+  margin-bottom: 0.625rem;
+}
+.modal-dialog.cmdb-ci-view-modal .modal-content .table-set {
+  margin-top: 2.188rem;
+}
+.modal-dialog.cmdb-ci-view-modal .modal-content .table-set table {
+  width: 100%;
+}
+.modal-dialog.cmdb-ci-view-modal .modal-content .table-set table .list-head tr {
+  color: #3F4B56;
+  border-bottom: 0.125rem solid #E1E3E6;
+}
+.modal-dialog.cmdb-ci-view-modal .modal-content .table-set table .list-body {
+  display: block;
+  width: 60rem;
+  height: 32.8125rem;
+  color: #586872;
+  overflow-y: auto;
+}
+.modal-dialog.cmdb-ci-view-modal .modal-content .table-set table .list-body .list-row {
+  display: table;
+  width: 100%;
+  height: 3.125rem;
+  line-height: 3.125rem;
+}
+.modal-dialog.cmdb-ci-view-modal .modal-content .table-set table .list-body .list-row > td {
+  display: inline-block;
+  vertical-align: middle;
+}
 
-/* _thumbnail.scss
+/* _thumbnail.scss 
  *
  * 파일 경로 : template/_thumbnail.scss
  * @description 썸네일 디자인
@@ -4816,7 +4889,7 @@ body.modal-active {
   background-position: center center;
 }
 
-/* _tooltip.scss
+/* _tooltip.scss 
  *
  * 파일 경로 : template/_tooltip.scss
  * @description 툴팁 디자인
@@ -5273,3 +5346,4 @@ body.modal-active {
 .itsm-popup .notice-content-popup.view {
   height: auto;
 }
+
