#10081 CI 조회 상세화면 구현
- custom-code 오류 수정(session 정보 수정)

--- a/src/main/resources/public/template/cmdb/ci/ciSearch.html
+++ b/src/main/resources/public/template/cmdb/ci/ciSearch.html
@@ -157,13 +157,13 @@
             let imgCiIcon = document.createElement('img');
             imgCiIcon.style.width = '27';
             imgCiIcon.style.height = '27';
-            imgCiIcon.src = '';
+            imgCiIcon.src = '/assets/media/images/cmdb/' + data.ciIcon;
             tdCiIcon.appendChild(imgCiIcon);
 
             let tdCiTypeName = document.createElement('td');
             tdCiTypeName.style.width = '10%';
             tdCiTypeName.className = 'align-center';
-            tdCiTypeName.innerText = data.ciTypeName;
+            tdCiTypeName.innerText = data.typeName;
 
             let tdCiNo = document.createElement('td');
             tdCiNo.style.width = '20%';
