#10097 [CI 컴포넌트] 태그 기능 추가

--- a/src/main/resources/public/src/scss/theme/default/_elements.scss
+++ b/src/main/resources/public/src/scss/theme/default/_elements.scss
@@ -110,7 +110,11 @@ table[id="documentDisplay"] {
     }
   }
 }
-
+// CI 조회 > 태그
+.tag-group {
+  display: initial;
+  line-height: 1.2;
+}
 // 문서함 > 태그
 .tag {
   display: inline-block;
