--- a/src/main/resources/public/template/cmdb/ci/ciViewModal.html
+++ b/src/main/resources/public/template/cmdb/ci/ciViewModal.html
@@ -63,7 +63,7 @@
                 <label class="field-label">
                     <span th:text="#{cmdb.ci.label.tag}"></span>
                 </label>
-                <input type="text" id="ciTags" readonly/>
+                <input type="text" id="ciTags" readonly th:onclick="CI.addTags(this, [[${ciData?.ciTags}]]);"/>
             </div>
             <!-- 세부속성 -->
             <div class="flex-column view-row">
