--- a/src/main/resources/public/src/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/src/scss/theme/default/_variables.scss
@@ -175,8 +175,24 @@ $vertical-bar-height:                         1.25rem; // 20px
 $vertical-bar-margin:                         0.0625rem 0.9375rem 0.0625rem 0; // 1px 5px 1px 0
 
 //////////////////////////// tag //////////////////////////////
+// tag
 $tag-font-color:                             rgba(0, 152, 255, 0.7); // $point-blue , 불투명도 70
 $tag-bg-color:                               rgba(0, 152, 255, 0.1); // $point-blue , 불투명도 10
+$tag-border:                                 0.0625rem solid #E5F5FF; // 1px
+// tag 삭제 버튼
+$tag-btn-remove-color:                       $hover-blue;
+// tag 마우스 오버
+$tag-hover-font-color:                       $point-blue;
+$tag-hover-bg-color:                         rgba(0, 152, 255, 0.1); // $point-blue , 불투명도 10
+$tag-hover-border:                           0.0625rem solid $point-blue; // 1px
+$tag-hover-btn-remove-color:                 $white;
+$tag-hover-btn-remove-bg-color:              $point-blue;
+// 빨간색 Tag 디자인은 중복된 태그 단어 입력 시 중복 입력은 불가능한
+// 느낌을 주기 위해 빨간색 Tag 디자인을 하였습니다. 중복된 Tag는 일정
+// 시간만 보여준 후 사라집니다.
+$tag-invalid-border:                         0.0625rem solid #FFEBEE; // 1px
+$tag-invalid-color:                          rgba(255, 64, 90, 0.7); // $red , 불투명도 70
+$tag-invalid-bg-color:                       rgba(255, 64, 90, 0.1); // $red , 불투명도 10
 
 //////////////////////////// CI 모달 /////////////////////////
 $cmdb-ci-modal-width:                        62.5rem; // 1000px
@@ -184,3 +200,5 @@ $cmdb-ci-modal-height:                       53.0625rem; // 849px
 
 $cmdb-ci-attribute-border:                   0.0625rem solid $line-gray; // 1px
 $cmdb-ci-attribute-bg-color:                 $light-gray;
+
+
